# franken_lean

./: .gitattributes  .gitignore  ABI_CONTRACT.md  AGENTS.md  COMPREHENSIVE_PLAN_FOR_THE_DESIGN_OF_FRANKEN_LEAN.md  Cargo.toml  KERNEL_CONTRACT.md  OLEAN_CONTRACT.md  README.md  rust-toolchain.toml  rustfmt.toml
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml
ci/: ABI_EXPORT_STATUS.txt  CLOSURE_ALLOWLIST.txt  KERNEL_CONTRACT_OWNERSHIP.jsonl  PARITY_LEDGER.txt  SUBSYSTEM_REGISTRY.txt  UNSAFE_LEDGER.txt  WORKSPACE_GRAPH.txt
contracts/: abi_inventory.json  extern_census.tsv  olean_inventory.json
crates/fln-anvil/: Cargo.toml
crates/fln-bignum/: Cargo.toml
crates/fln-checker/: Cargo.toml
crates/fln-cli/: Cargo.toml
crates/fln-comp/: Cargo.toml
crates/fln-conformance/: Cargo.toml
crates/fln-conformance/src/: ledger.rs  lib.rs  naming.rs  normalize.rs  ownership.rs  poison.rs  precedence.rs
crates/fln-conformance/tests/: contract_roots.rs  core_observables.rs  diag_render.rs  generated_name_drift_guard.rs  kernel_contract.rs  kernel_replay.rs  parity_ledger.rs  poison_compile_out.rs  reserved_name_collision_model.rs  subsystem_name_registry.rs  vellum_surface_inventory.rs
crates/fln-core/: Cargo.toml
crates/fln-doc/: Cargo.toml
crates/fln-elab/: Cargo.toml
crates/fln-env/: Cargo.toml
crates/fln-hash/: Cargo.toml
crates/fln-hound/: Cargo.toml
crates/fln-kernel/: Cargo.toml
crates/fln-lake/: Cargo.toml
crates/fln-ledger/: Cargo.toml
crates/fln-libm/: Cargo.toml
scripts/: check.sh  evidence.py  verify_vendor_tree.sh
(+131 files in other folders)
